# backend

./: .gitignore  Cargo.toml  README.md  config.toml
src/: error.rs  main.rs
src/database/: memory.rs  mod.rs
src/representation/: config.rs  mod.rs  models.rs
src/routes/v1/: auth.rs  friends.rs  mod.rs  user.rs
